--- a/po/fr_CA/pledge.po
+++ b/po/fr_CA/pledge.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Mathieu Lutfy <mathieu@bidon.ca>, 2015
+# Mathieu Lutfy <mathieu@bidon.ca>, 2015-2016
 # pictogram <inactive+pictogram@transifex.com>, 2013
 # pictogram <inactive+pictogram@transifex.com>, 2013
 # pictogram <inactive+pictogram@transifex.com>, 2013
@@ -13,8 +13,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-10 16:19+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -54,11 +54,11 @@ msgid "Pledge Payment Status"
 msgstr "État de l'engagement de paiement"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2 (overdue)"
+msgid "%1 - due on %2 (overdue)"
 msgstr "%1 $ - exigible le %2 (en retard)"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2"
+msgid "%1 - due on %2"
 msgstr "%1 $ - exigible le %2"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
@@ -83,14 +83,6 @@ msgid "Pledge Frequency Interval"
 msgstr "Récurrence"
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Pledge Status %1"
-msgstr "État de l'engagement %1"
-
-#: CRM/Pledge/BAO/Query.php
-msgid "Pledge Payment Status %1"
-msgstr "État de l'engagement de paiement %1"
-
-#: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test"
 msgstr "L'engagement est un test"
 
@@ -101,6 +93,10 @@ msgstr "Type financier  - %1"
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Page - %1"
 msgstr "Page finances - %1"
+
+#: CRM/Pledge/BAO/Query.php
+msgid "Contact ID %1 %2"
+msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
@@ -150,10 +146,6 @@ msgstr "Date de modification de la promesse de don"
 msgid "Pledge Cancelled Date"
 msgstr "Date d'annulation de la promesse de don"
 
-#: CRM/Pledge/DAO/Pledge.php
-msgid "Pledge Honor Contact"
-msgstr "Contact de la personne honorée par la promesse de don"
-
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Maximum Number of Reminders"
 msgstr "Nombre maximum de rappels"
@@ -192,12 +184,12 @@ msgid "Reminders Sent"
 msgstr "Rappels envoyés"
 
 #: CRM/Pledge/Form/Payment.php
+msgid "Edit Scheduled Pledge Payment"
+msgstr "Modifier un paiement planifié"
+
+#: CRM/Pledge/Form/Payment.php
 msgid "Pledge Payment Schedule has been updated."
 msgstr "L'échéancier de versement des dons a été mis à jour."
-
-#: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Pledge by"
-msgstr "Promesse faite par"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
@@ -304,6 +296,10 @@ msgid "Pledger Name or Email"
 msgstr "Nom ou adresse électronique de la personne faisant la promesse"
 
 #: CRM/Pledge/Form/Search.php
+msgid "Pledger Name"
+msgstr ""
+
+#: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
 msgstr "Trouver des promesses de don"
 
@@ -312,12 +308,10 @@ msgid "Delete Pledges"
 msgstr "Supprimer les promesses"
 
 #: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1"
-msgstr "Promesse(s) supprimée(s): %1"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Total Selected Pledge(s): %1"
-msgstr "Total promesse(s) sélectionnée(s) : %1"
+msgid "%count pledge deleted."
+msgid_plural "%count pledges deleted."
+msgstr[0] "%count de promesses de don supprimées."
+msgstr[1] "%count de promesses de don supprimées."
 
 #: CRM/Pledge/Form/Task/Print.php
 msgid "Print Pledge List"
@@ -326,6 +320,30 @@ msgstr "Imprimer la liste de promesses de don"
 #: CRM/Pledge/Info.php
 msgid "CiviCRM Pledge Engine"
 msgstr "Moteur de promesses CiviCRM"
+
+#: CRM/Pledge/Info.php
+msgid "access CiviPledge"
+msgstr "Accéder à CiviPledge"
+
+#: CRM/Pledge/Info.php
+msgid "View pledges"
+msgstr "Visualiser les promesses de don"
+
+#: CRM/Pledge/Info.php
+msgid "edit pledges"
+msgstr "Editer les promesses de don"
+
+#: CRM/Pledge/Info.php
+msgid "Create and update pledges"
+msgstr "Créer et mettre à jour les promesses de don"
+
+#: CRM/Pledge/Info.php
+msgid "delete in CiviPledge"
+msgstr "supprimer dans CiviPledge"
+
+#: CRM/Pledge/Info.php
+msgid "Delete pledges"
+msgstr "Supprimer les promesses de don"
 
 #: CRM/Pledge/Info.php
 msgid "Your Pledge(s)"
@@ -343,11 +361,11 @@ msgid ""
 "pledge payments."
 msgstr "Annuler cette promesse va aussi annuler tous les paiements planifiés et non encore effectués."
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/PledgeView.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "View Pledge"
 msgstr "Consulter la promesse"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Edit Pledge"
 msgstr "Modifier la promesse"
 
@@ -355,7 +373,7 @@ msgstr "Modifier la promesse"
 msgid "Cancel Pledge"
 msgstr "Annuler la promesse"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Delete Pledge"
 msgstr "Supprimer la promesse"
 
@@ -376,20 +394,12 @@ msgid "Pledge Search"
 msgstr "Rechercher les promesses"
 
 #: CRM/Pledge/Task.php
-msgid "Print Pledges"
-msgstr "Imprimer les promesses"
-
-#: CRM/Pledge/Task.php
 msgid "Export Pledges"
 msgstr "Exporter les promesses"
 
 #: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Edit Scheduled Pledge Payment"
-msgstr "Modifier un paiement planifié"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Scheduled Date for Pledge payment."
-msgstr "Date planifiée de paiement"
+msgid "Adjust scheduled amount"
+msgstr "Changer le montant des versements programmés"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -398,10 +408,6 @@ msgid ""
 " to be sent when this pledge is recorded, click Cancel and then click Edit "
 "from the Summary tab to add an email address before recording the pledge."
 msgstr "Vous ne serez pas en mesure d'envoyer un accusé de réception pour cette promesse car il n'y a pas d'adresse électronique enregistrée pour ce contact. Si vous voulez qu'un accusé de réception soit envoyé lorsque vous aurez enregistré cette promesse, cliquez sur Annuler, puis cliquez sur Éditer depuis l'onglet Résumé pour ajouter une adresse électronique avant d'enregistrer cette promesse."
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "New Pledge"
-msgstr "Nouvelle promesse de don"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -418,6 +424,10 @@ msgid ""
 msgstr "Vous devriez plutôt annuler la promesse afin de conserver vos données et éviter de perdre des données de paiement. Pour faire passer la promesse dans l'état Annulée et annuler toutes les échéances non encore payées, cliquez d'abord sur Annuler sur cette page, puis cliquez sur le lien Plus depuis la liste de promesses et sélectionnez l'action d'annulation."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+msgid "Pledge by"
+msgstr "Promesse faite par"
+
+#: templates/CRM/Pledge/Form/Pledge.tpl
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid ""
 " Pledge total has changed due to payment adjustments. Original pledge amount"
@@ -425,6 +435,7 @@ msgid ""
 msgstr "Le total de la promesse a changé à cause de changements faits à des échéances. Le montant promis original était de %1."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+#: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "installments of"
 msgstr "Échéances de"
 
@@ -447,10 +458,6 @@ msgstr "Date de la première échéance de paiement."
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Automatically email an acknowledgment of this pledge to %1?"
 msgstr "Envoi automatique d'un courriel d'accusé de réception de cette promesse à %1 ?"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Automatically email an acknowledgment of this pledge to "
-msgstr "Envoi automatique d'un courriel d'accusé de réception de cette promesse à "
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Date when an acknowledgment of the pledge was sent."
@@ -476,20 +483,12 @@ msgstr "Les promesses restent dans l'état «En attente » jusqu'à ce que le pr
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now"
-msgstr "Cliquez sur OK pour enregistrer cette promesse ET envoyer un accusé de réception maintenant à %1"
+"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
+msgstr "Cliquer sur OK pour enregistrer la promesse de don ET envoyer une confirmation to %1 maintenant."
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Pledge By"
 msgstr "Promesse de don par"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " installments of "
-msgstr "Échéances de paiement de "
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " every "
-msgstr "tous les"
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Payment Start"
@@ -516,10 +515,6 @@ msgid "Payments Ended Date"
 msgstr "Date de fin des paiements"
 
 #: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
-msgid "No matching pledge results found."
-msgstr "Aucun engagement de don trouvé"
-
-#: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
 msgid ""
 "If you are searching by pledger name, check your spelling or use fewer "
 "letters."
@@ -532,8 +527,16 @@ msgid ""
 msgstr "Si vous êtes en train de rechercher dans un intervalle de temps ou de montants, essayez d'élargir l'intervalle."
 
 #: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click %1 to view pledge payments."
-msgstr "Cliquez sur %1 pour consulter les paiements de la promesse."
+msgid "Click arrow to view pledge payments."
+msgstr "Cliquer sur la flèche pour voir les paiements de la promesse de don"
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Show payments"
+msgstr "Visualiser les paiements"
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Hide payments"
+msgstr "Masquer les paiements"
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Find more pledges"
@@ -553,10 +556,6 @@ msgstr "A Payer"
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Begining Date"
 msgstr "Date de début"
-
-#: templates/CRM/Pledge/Form/Task/SearchTaskHookSample.tpl
-msgid "Pledge made"
-msgstr "Promesse de don faite"
 
 #: templates/CRM/Pledge/Form/Task.tpl
 msgid "Number of selected pledges: %1"
@@ -607,20 +606,12 @@ msgid "Amount Paid"
 msgstr "Montant payé"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>View Payment</a>"
-msgstr "<a href='%1'>Voir les paiements</a>"
+msgid "Credit Card Payment"
+msgstr "Paiement par carte de crédit"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Record Payment (Check, Cash, EFT ...)</a>"
-msgstr "<a href='%1'>Paiements enregistrés (Chèque, Espèces, Virement...)</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Submit Credit Card Payment</a>"
-msgstr "<a href='%1'>Payer par carte bancaire</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Edit Scheduled Payment</a>"
-msgstr "<a href='%1'>Éditer le paiement planifié</a>"
+msgid "Edit Scheduled Payment"
+msgstr "Modifier le paiement programmé"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid "Payment Reminders"
@@ -640,9 +631,10 @@ msgstr "Pour que les rappels soient envoyés :"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
-"Your site administrator must configure the provided script which updates "
-"pledge payment statuses and sends the reminders (UpdatePledgeRecord.php)."
-msgstr "L'administrateur de votre site doit configurer le script fourni qui effectue les mises à jour des statuts des promesses de paiement et envoie les rappels (UpdatePledgeRecord.php)."
+"Your site administrator must configure the scheduled job (Administer > "
+"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
+"sends the reminders."
+msgstr "Votre administrateur doit configurer la tâche périodique (Administrer > Paramètres système > Tâches périodiques) qui met à jour le statut des paiements d'une promesse de don et qui envoie un courriel de rappel."
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
@@ -662,13 +654,17 @@ msgstr "Promesses reçues de %1 depuis le début."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid ""
-"Click <a href='%1'>Add Pledge</a> to record a new pledge received from this "
+"Click <a %1>Add Pledge</a> to record a new pledge received from this "
 "contact."
-msgstr "Cliquez sur <a href='%1'>Créer une promesse</a> pour enregistrer une nouvelle promesse reçue de ce contact."
+msgstr "Cliquer sur <a %1> Ajouter une promesse de don</a> pour enregistrer une nouvelle promesse de don reçu par ce contat."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "No pledges have been recorded from this contact."
 msgstr "Aucune promesse de dons enregistrée pour ce contact."
+
+#: templates/CRM/Pledge/Page/Tab.tpl
+msgid "Contributions made in honor of %1"
+msgstr ""
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
@@ -794,94 +790,38 @@ msgstr "Merci pour votre généreux support."
 msgid "Pledge Payment Reminder"
 msgstr "Rappel de paiement de promesse"
 
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2 (overdue)"
-msgstr "%1 $ - exigible le %2 (en retard)"
-
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2"
-msgstr "%1 $ - exigible le %2"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1 (Total Selected: %2) "
-msgstr "Promesses de don suprimées: %1 (Nombre total sélectionné: %2)"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Adjust scheduled amount"
-msgstr "Changer le montant des versements programmés"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
-msgstr "Cliquer sur OK pour enregistrer la promesse de don ET envoyer une confirmation to %1 maintenant."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click arrow to view pledge payments."
-msgstr "Cliquer sur la flèche pour voir les paiements de la promesse de don"
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Show payments"
-msgstr "Visualiser les paiements"
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Hide payments"
-msgstr "Masquer les paiements"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Credit Card Payment"
-msgstr "Paiement par carte de crédit"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Edit Scheduled Payment"
-msgstr "Modifier le paiement programmé"
-
-#: templates/CRM/Pledge/Page/Tab.hlp
-msgid ""
-"Your site administrator must configure the scheduled job (Administer > "
-"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
-"sends the reminders."
-msgstr "Votre administrateur doit configurer le programme (Administrer > Paramètres système > Travaux programmés) qui met à jour le statut des paiements d'une promesse de don et qui envoit un email de rappel."
-
-#: templates/CRM/Pledge/Page/Tab.tpl
-msgid ""
-"Click <a %1>Add Pledge</a> to record a new pledge received from this "
-"contact."
-msgstr "Cliquer sur <a %1> Ajouter une promesse de don</a> pour enregistrer une nouvelle promesse de don reçu par ce contat."
+#: CRM/Pledge/BAO/Query.php
+msgid "Pledge Acknowledgement Sent"
+msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Contact ID %1 %2"
+msgid "Pledge Acknowledgement  Not Sent"
 msgstr ""
 
-#: CRM/Pledge/Form/Search.php
-msgid "Pledger Name"
+#: CRM/Pledge/BAO/Query.php
+msgid "Acknowledgement sent?"
 msgstr ""
 
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "%count pledge deleted."
-msgid_plural "%count pledges deleted."
-msgstr[0] "%count de promesses de don supprimées."
-msgstr[1] "%count de promesses de don supprimées."
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter a number"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "access CiviPledge"
-msgstr "Accéder à CiviPledge"
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter number."
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "View pledges"
-msgstr "Visualiser les promesses de don"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Pledge Block ID"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "edit pledges"
-msgstr "Editer les promesses de don"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Expose Frequency Interval?"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "Create and update pledges"
-msgstr "Créer et mettre à jour les promesses de don"
+#: CRM/Pledge/Task.php
+msgid "Export pledges"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "delete in CiviPledge"
-msgstr "supprimer dans CiviPledge"
-
-#: CRM/Pledge/Info.php
-msgid "Delete pledges"
-msgstr "Supprimer les promesses de don"
+#: templates/CRM/Pledge/Form/Task/Print.tpl
+msgid "Beginning Date"
+msgstr ""
