--- a/po/fr_CA/pcp.po
+++ b/po/fr_CA/pcp.po
@@ -4,15 +4,15 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # SR71 <ben.alard@gmail.com>, 2012
-# Mathieu Lutfy <mathieu@bidon.ca>, 2015
+# Mathieu Lutfy <mathieu@bidon.ca>, 2015-2016
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # SR71 <ben.alard@gmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -37,6 +37,10 @@ msgstr "Éditer votre page"
 msgid "Tell Friends"
 msgstr "Recommander à des amis"
 
+#: CRM/PCP/BAO/PCP.php
+msgid "URL for this Page"
+msgstr "URL de cette page"
+
 #: CRM/PCP/BAO/PCP.php CRM/PCP/Form/PCPAccount.php
 msgid "Update Contact Information"
 msgstr "Mettre à jour les informations de contact"
@@ -50,8 +54,8 @@ msgid "Approval required"
 msgstr "Validation requise"
 
 #: CRM/PCP/BAO/PCP.php
-msgid "Supporter profile"
-msgstr "Profil de supporter"
+msgid "Owner Email Notification"
+msgstr ""
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Allow 'Tell a friend' functionality"
@@ -71,14 +75,14 @@ msgstr "Texte du lien « Créer une page de campagne personnelle »"
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This event registration is being made thanks to effort of "
+"This event registration is being made thanks to the efforts of "
 "<strong>%1</strong>, who supports our campaign. "
 msgstr ""
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This contribution is being made thanks to effort of <strong>%1</strong>, who"
-" supports our campaign. "
+"This contribution is being made thanks to the efforts of "
+"<strong>%1</strong>, who supports our campaign. "
 msgstr ""
 
 #: CRM/PCP/BAO/PCP.php
@@ -155,6 +159,12 @@ msgid ""
 "is disabled. Please contact the site administrator if you need assistance."
 msgstr "Le profil de supporter n'est pas mis pour cette page de campagne personnalisée ou il est désactivé. Veuillez contacter l'administrateur du site pour obtenir de l'aide."
 
+#: CRM/PCP/BAO/PCP.php
+msgid ""
+"Owner Notification is not set for this Personal Campaign Page. Please "
+"contact the site administrator if you need assistance."
+msgstr ""
+
 #: CRM/PCP/DAO/PCP.php
 msgid "Personal Campaign Page ID"
 msgstr "Identifiant de la page de campagne personnelle"
@@ -189,6 +199,10 @@ msgid "Target Entity Type"
 msgstr "Type d'entité cible"
 
 #: CRM/PCP/DAO/PCPBlock.php
+msgid "Owner Notification"
+msgstr ""
+
+#: CRM/PCP/DAO/PCPBlock.php
 msgid "Tellfriend Limit"
 msgstr "Limite Recommander à des amis"
 
@@ -203,6 +217,10 @@ msgstr "Créer une page de campagne personnelle - étape 2"
 #: CRM/PCP/Form/Campaign.php
 msgid "Edit Your Personal Campaign Page"
 msgstr "Éditer votre page de campagne personnelle"
+
+#: CRM/PCP/Form/Campaign.php
+msgid "Welcome"
+msgstr "Bienvenue"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Your Goal"
@@ -237,26 +255,16 @@ msgid "Honor Roll"
 msgstr "Liste de remerciements"
 
 #: CRM/PCP/Form/Campaign.php
+msgid "Notify me via email when someone donates to my page"
+msgstr "M'informer par courriel lorsqu'un don est fait à ma page"
+
+#: CRM/PCP/Form/Campaign.php
 msgid "Goal Amount should be a numeric value greater than zero."
 msgstr "Le montant ciblé doit être un nombre positif."
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Button Text must be less than 64 characters."
 msgstr "Le libellé du bouton doit avoir moins de 64 caractères."
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Your picture or image file cannot be larger than 360 x 360 pixels in size."
-msgstr "Votre fichier image ne peut être plus gros que 360 x 360 pixels."
-
-#: CRM/PCP/Form/Campaign.php
-msgid "The dimensions of the image you have selected are %1 x %2."
-msgstr "Les dimensions de l'image sélectionnée sont  %1 x %2."
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Please shrink or crop the file or find another smaller image and try again."
-msgstr "Veuillez le redimensionner ou le découper ou trouver une image plus petite et essayez de nouveau."
 
 #: CRM/PCP/Form/Campaign.php
 msgid ""
@@ -362,10 +370,6 @@ msgstr "page activée"
 msgid "Source Type"
 msgstr "Type d'origine"
 
-#: CRM/PCP/Form/PCP.php
-msgid "Event Page"
-msgstr "Page d'événement"
-
 #: CRM/PCP/Form/PCPAccount.php
 msgid ""
 "We can't load the requested web page due to an incomplete link. This can be "
@@ -440,6 +444,10 @@ msgid "Send emails inviting your friends to support your campaign!"
 msgstr "Envoyer des courriels invitant vos amis à soutenir votre campagne !"
 
 #: CRM/PCP/Page/PCPInfo.php
+msgid "Copy this link to share directly with your network!"
+msgstr ""
+
+#: CRM/PCP/Page/PCPInfo.php
 msgid "Update your personal contact information"
 msgstr "Mettre à jour vos informations personnelles de contact"
 
@@ -479,9 +487,15 @@ msgstr "Le texte pour le bouton de contribution ou d'inscription."
 #: templates/CRM/PCP/Form/Campaign.tpl
 msgid ""
 "If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported your campaign. (People will"
-" have the option to remain anonymous. Their names will NOT be listed.)"
-msgstr "Si cette option est cochée, une liste de remerciements sera affichée avec les noms (ou surnoms) des personnes qui ont soutenu votre campagne (les personnes auront la possibilité de rester anonymes, leurs noms ne seront alors pas inclus dans la liste)."
+"names (or nicknames) of the people who supported you. (Donors will have the "
+"option to remain anonymous. Their names will NOT be listed.)"
+msgstr ""
+
+#: templates/CRM/PCP/Form/Campaign.tpl
+msgid ""
+"If this option is checked, you will receive an email notification when "
+"people contribute to your campaign."
+msgstr ""
 
 #: templates/CRM/PCP/Form/Contribute.hlp
 msgid ""
@@ -491,10 +505,6 @@ msgid ""
 "Campaign Page are recorded as \"soft credits\" for the supporter who created"
 " that campaign page."
 msgstr "Lorsque les pages de campagne personnelles sont activées, les contacts verront un lien les invitant à créer leur propre page de collecte de fonds une fois qu'ils ont contribué. Les contributions de personnes faites par l'intermédiaire d'une page de campagne personnalisée sont enregistrées comme « contribution indirecte » pour le sympathisant qui a créé cette page de campagne."
-
-#: templates/CRM/PCP/Form/Contribute.hlp
-msgid "Approval"
-msgstr ""
 
 #: templates/CRM/PCP/Form/Contribute.hlp templates/CRM/PCP/Form/Event.hlp
 msgid "Email Notification"
@@ -730,6 +740,38 @@ msgstr "Consulter la page"
 msgid "Linked to Contribution Page"
 msgstr "En relation avec la page de contribution"
 
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "You have received a donation at your personal page"
+msgstr ""
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Your fundraising total has been updated."
+msgstr ""
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's information is listed below.  You can choose to contact them and"
+" convey your thanks if you wish."
+msgstr ""
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's name has been added to your honor roll unless they asked not to "
+"be included."
+msgstr ""
+
+#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
+msgid "Someone has just donated to your personal campaign page"
+msgstr ""
+
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Personal Campaign Page Owner Notification"
+msgstr ""
+
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid "Your Personal Campaign Page"
@@ -762,9 +804,9 @@ msgstr "Aller sur votre page"
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to edit\n"
-"your page, tell friends, and update your contact info."
-msgstr "Lorsque vous accédez à votre page de campagne tout en étant connecté"
+"When you view your campaign page WHILE LOGGED IN, the page includes links to"
+" edit your page, tell friends, and update your contact info."
+msgstr ""
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -782,9 +824,10 @@ msgstr "Questions ? Envoyez un courriel à"
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid ""
-"Your personal campaign page has been reviewed. There were some issues with the content\n"
-"which prevented us from approving the page. We are sorry for any inconvenience."
-msgstr "Votre page de campagne personnelle a été passée en revue. Il y a des problèmes dans son contenu qui nous empêchent de la valider. Nous sommes désolés pour la gêne occasionnée."
+"Your personal campaign page has been reviewed. There were some issues with "
+"the content which prevented us from approving the page. We are sorry for any"
+" inconvenience."
+msgstr ""
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -879,102 +922,42 @@ msgstr "Cliquer ou copier ce lien dans votre navigateur et suivez les instructio
 msgid "Click or paste this link into your browser"
 msgstr "Cliquer ou copier ce lien dans votre navigateur"
 
-#: CRM/PCP/BAO/PCP.php
-msgid "URL for this Page"
-msgstr "URL de cette page"
-
-#: CRM/PCP/Page/PCPInfo.php
-msgid "Copy this link to share directly with your network!"
+#: CRM/PCP/DAO/PCP.php
+msgid "PCP Block"
 msgstr ""
 
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported you. (Donors will have the "
-"option to remain anonymous. Their names will NOT be listed.)"
-msgstr ""
+#: CRM/PCP/DAO/PCP.php
+msgid "Use Thermometer?"
+msgstr "Utiliser le thermomètre ?"
 
-#: CRM/PCP/BAO/PCP.php
-msgid "Owner Email Notification"
-msgstr ""
+#: CRM/PCP/DAO/PCP.php
+msgid "Show Honor Roll?"
+msgstr "Afficher la liste des donateurs ?"
 
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This event registration is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
-msgstr ""
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This contribution is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
-msgstr ""
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"Owner Notification is not set for this Personal Campaign Page. Please "
-"contact the site administrator if you need assistance."
+#: CRM/PCP/DAO/PCP.php
+msgid "Notify Owner?"
 msgstr ""
 
 #: CRM/PCP/DAO/PCPBlock.php
-msgid "Owner Notification"
+msgid "PCP Block ID"
 msgstr ""
 
-#: CRM/PCP/Form/Campaign.php
-msgid "Notify me via email when someone donates to my page"
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity"
+msgstr "Entité cible"
+
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity ID"
+msgstr "ID de l'entité cible"
+
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Approval Required?"
+msgstr "Validation requise ?"
+
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell a Friend Enabled?"
 msgstr ""
 
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, you will receive an email notification when "
-"people contribute to your campaign."
-msgstr ""
-
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "You have received a donation at your personal page"
-msgstr ""
-
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Your fundraising total has been updated."
-msgstr ""
-
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's information is listed below.  You can choose to contact them and"
-" convey your thanks if you wish."
-msgstr ""
-
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's name has been added to your honor roll unless they asked not to "
-"be included."
-msgstr ""
-
-#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
-msgid "Someone has just donated to your personal campaign page"
-msgstr ""
-
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Personal Campaign Page Owner Notification"
-msgstr ""
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_html.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_text.tpl
-msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to"
-" edit your page, tell friends, and update your contact info."
-msgstr ""
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-msgid ""
-"Your personal campaign page has been reviewed. There were some issues with "
-"the content which prevented us from approving the page. We are sorry for any"
-" inconvenience."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell A Friend Limit"
 msgstr ""
